Fixes to footer, carousal, gallery and local-attractions on mobile view

--- a/src/components/carousal/carousal.module.css
+++ b/src/components/carousal/carousal.module.css
@@ -1,47 +1,47 @@
 .carousalImage {
-  height: 37.5rem;
+  height: 32rem;
   object-fit: cover;
   width: 100%;
 }
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 20rem) {
   .carousalImage {
     height: 15rem;
   }
 }
 
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 23.4375rem) {
+  .carousalImage {
+    height: 16rem;
+  }
+}
+
+@media screen and (min-width: 26.5625rem) {
   .carousalImage {
     height: 17rem;
   }
 }
 
-@media screen and (min-width: 425px) {
-  .carousalImage {
-    height: 19rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 48rem) {
   .carousalImage {
     height: 28rem;
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 64rem) {
   .carousalImage {
-    height: 37.5rem;
+    height: 32rem;
   }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 90rem) {
+  .carousalImage {
+    height: 36rem;
+  }
+}
+
+@media screen and (min-width: 160rem) {
   .carousalImage {
     height: 40rem;
-  }
-}
-
-@media screen and (min-width: 2560px) {
-  .carousalImage {
-    height: 42rem;
   }
 }
